@@ -1,11 +1,16 @@
 package com.helios.auctix.controllers;
 
 import com.helios.auctix.domain.auction.Bid;
+import com.helios.auctix.domain.user.User;
 import com.helios.auctix.dtos.BidDTO;
+import com.helios.auctix.dtos.PlaceBidRequest;
 import com.helios.auctix.services.BidService;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.helios.auctix.services.user.UserDetailsService;
+import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -19,30 +24,29 @@ import java.util.logging.Logger;
 @RestController
 @RequestMapping("/api/bids")
 @CrossOrigin(origins = "*")
+@AllArgsConstructor
 public class BidController {
 
     private final BidService bidService;
     private final Logger log = Logger.getLogger(BidController.class.getName());
+    private final UserDetailsService userDetailsService;
 
-    @Autowired
-    public BidController(BidService bidService) {
-        this.bidService = bidService;
-    }
-
+    //to get bid history
     @GetMapping("/auction/{auctionId}")
     public ResponseEntity<List<BidDTO>> getBidHistoryForAuction(@PathVariable UUID auctionId) {
         try {
-            List<Bid> bidHistory = bidService.getBidHistoryForAuction(auctionId);
-            List<BidDTO> bidDTOs = bidHistory.stream()
-                    .map(this::convertToDTO)
-                    .collect(Collectors.toList());
-            return ResponseEntity.ok(bidDTOs);
+            List<BidDTO> bidHistory = bidService.getBidHistoryForAuction(auctionId)
+                    .stream()
+                    .map(bidService::convertToDTO)
+                    .toList();
+            return ResponseEntity.ok(bidHistory);
         } catch (Exception e) {
             log.warning("Error fetching bid history for auction " + auctionId + ": " + e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
     }
 
+    //to get the highest bid
     @GetMapping("/auction/{auctionId}/highest")
     public ResponseEntity<?> getHighestBidForAuction(@PathVariable UUID auctionId) {
         try {
@@ -55,21 +59,19 @@ public class BidController {
         }
     }
 
+    //to place new bids
     @PostMapping("/place")
     public ResponseEntity<?> placeBid(@RequestBody PlaceBidRequest request) {
         try {
-            log.info("Received bid request: " + request.toString());
+            Authentication authentication = SecurityContextHolder
+                    .getContext()
+                    .getAuthentication();
 
-            Bid placedBid = bidService.placeBid(
-                    request.getAuctionId(),
-                    request.getBidderName(),
-                    request.getBidderAvatar(),
-                    request.getAmount()
-            );
+            User bidder = userDetailsService
+                    .getAuthenticatedUser(authentication);
 
-            // Convert to DTO to avoid circular references
-            BidDTO bidDTO = convertToDTO(placedBid);
-            return ResponseEntity.ok(bidDTO);
+            BidDTO placedBid = bidService.placeBid(request, bidder);
+            return ResponseEntity.ok(placedBid);
         } catch (IllegalArgumentException e) {
             log.warning("Bad request in place bid: " + e.getMessage());
             return ResponseEntity.badRequest().body(e.getMessage());
